pyload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyload
  namespace: pyload
  labels:
    app: pyload
spec:
  ports:
    - port: 8000
  selector:
    app: pyload
