pyload/ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pyload
  namespace: pyload
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: pyloa
spec:
  rules:
  - host: "pyload.azema.net"
    http:
      paths:
      - backend:
          serviceName:  pyload
          servicePort: 8000
